css/style.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap');

body {
  margin: 0;
  background-color: #ffffff;
  font-family: 'Rubik', sans-serif;
  font-size: 18px;
}
.screen-reader {
  position: absolute;
  left: -100vw;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}
.image-block {
  display: flex;
}
.button {
  background-color: hsl(231, 69%, 60%);
  color: #ffffff;
  font-family: 'Rubik', sans-serif;
  font-size: 14px;
  font-weight: 500;
  border: 2px solid hsl(231, 69%, 60%);
  border-radius: 5px;
  padding: 10px 20px;
  cursor: pointer;
}
.button:hover,
.button:focus {
  background-color: #ffffff;
  color: hsl(231, 69%, 60%);
}
/* Common menu styles for header and footer nav bar */
.menu {
  list-style: none;
  display: flex;
  margin: 0;
}
.menu__item {
  margin-right: 40px;
}
.menu__link {
  font-size: 14px;
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 0.07em;
}
.menu__link:hover,
.menu__link:focus {
  color: hsl(0, 94%, 66%);
}
/* Header Section */
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 50px 150px;
}
.header__mobile-menu__button {
  display: none;
}
.header__menu__link {
  color: hsl(229, 31%, 21%);
}
.header__menu__link__button {
  color: #ffffff;
  background: hsl(0, 94%, 66%);
  border: 2px solid hsl(0, 94%, 66%);
  border-radius: 5px;
  padding: 10px 30px;
}
.header__menu__link__button:hover,
.header__menu__link__button:focus {
  color: hsl(0, 94%, 66%);
  background: #ffffff;
}
.header__mobile__social-links {
  display: none;
}
/* Intro Section */
.intro {
  position: relative;
  display: flex;
  padding: 50px 75px 50px 150px;
  align-items: center;
}
.intro__text-block {
  flex: 1 1 0;
}
.intro__title {
  color: hsl(229, 31%, 21%);
  font-weight: 500;
  font-size: 48px;
  margin: 0;
}
.intro__paragraph {
  color: hsl(229, 8%, 60%);
  padding-right: 20px;
  line-height: 1.5;
  margin: 20px 70px 30px 0;
}
.intro__firefox-button {
  background-color: hsl(0, 0%, 93%);
  color: hsl(229, 31%, 21%);
  border: 2px solid hsl(0, 0%, 93%);
  margin-left: 10px;
}
.intro__firefox-button:hover,
.intro__firefox-button:focus {
  background-color: #ffffff;
  color: hsl(229, 31%, 21%);
  border: 2px solid hsl(229, 31%, 21%);
}
.intro__image-block {
  flex: 1 1 0;
}
.intro__image {
  width: 100%;
}
.background-blue-block-right {
  height: 350px;
  width: 34vw;
  background: hsl(231, 69%, 60%);
  border-bottom-left-radius: 40%;
  position: absolute;
  right: 0;
  bottom: 25px;
  z-index: -1;
}
/* Features section */
.features {
  padding: 50px 150px;
  position: relative;
}
.features__intro {
  text-align: center;
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
}
.features__title {
  font-size: 30px;
  font-weight: 500;
  color: hsl(229, 31%, 21%);
  grid-column: 2;
  margin: 10px 0;
}
.features__paragraph {
  line-height: 1.5;
  color: hsl(229, 8%, 60%);
  grid-column: 2;
  margin: 15px;
}
.features__buttons {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 0;
  margin: 50px 0;
  grid-column: 2;
}
.features__button {
  background: #ffffff;
  color: hsl(225, 7%, 45%);
  font-family: 'Rubik', sans-serif;
  font-size: 18px;
  border: none;
  border-bottom: 1px solid hsl(229, 8%, 60%);
  padding: 25px 50px;
  cursor: pointer;
}
.features__button:hover,
.features__button:focus {
  color: hsl(0, 94%, 66%);
}
.features__current-button {
  color: hsl(229, 31%, 21%);
  border-bottom: 1px solid hsl(0, 94%, 66%);
  box-shadow: inset 0 -5px 0 hsl(0, 94%, 66%);
}
.features__current-button:hover,
.features__current-button:focus {
  color: hsl(229, 31%, 21%);
}
.features__facts {
  display: grid;
  grid-template-columns: 1fr;
}
.features__fact {
  grid-column: 1;
  grid-row: 1;
  display: none;
  grid-template-columns: 40vw 1fr;
  grid-gap: 125px;
  align-items: center;
}
.features__current-fact {
  display: grid;
}
.features__image-block {
  justify-content: flex-end;
}
.features__fact__image {
  height: 420px;
}
#fact-one .features__fact__image {
  width: 100%;
}
.features__fact__title {
  color: hsl(229, 31%, 21%);
  font-weight: 500;
  font-size: 30px;
  margin: 0;
}
.features__fact__paragraph {
  line-height: 1.5;
  color: hsl(229, 8%, 60%);
  margin: 25px 0;
}
.background-blue-block-left {
  height: 375px;
  width: 40vw;
  background: hsl(231, 69%, 60%);
  border-bottom-right-radius: 40%;
  position: absolute;
  left: 0;
  bottom: 0;
  z-index: -1;
}
/* Download section */
.download {
  padding: 150px;
}
.download__intro {
  text-align: center;
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
}
.download__title {
  font-size: 30px;
  font-weight: 500;
  color: hsl(229, 31%, 21%);
  grid-column: 2;
  margin: 10px 0;
}
.download__paragraph {
  line-height: 1.5;
  color: hsl(229, 8%, 60%);
  grid-column: 2;
  margin: 15px;
}
.download__boxes {
  display: grid;
  grid-template-columns: repeat(3, 250px);
  grid-template-rows: repeat(2, 35px) auto repeat(2, 35px);
  grid-column-gap: 35px;
  justify-content: center;
  margin-top: 50px;
}
.download__box__chrome {
  grid-column: 1;
  grid-row: 1 / 4;
}
.download__box__firefox {
  grid-column: 2;
  grid-row: 2 / 5;
}
.download__box__opera {
  grid-column: 3;
  grid-row: 3 / 6;
}
.download__box {
  text-align: center;
  padding: 30px 25px 25px;
  border-radius: 10px;
  box-shadow: 0px 15px 2rem -1rem hsl(229, 8%, 60%);
}
.download__box__title {
  font-weight: 500;
  font-size: 20px;
  color: hsl(229, 31%, 21%);
  margin: 30px 0 0 0;
}
.download__box__text {
  font-weight: 400;
  font-size: 14px;
  color: hsl(229, 8%, 60%);
  margin: 10px 0;
}
.download__dots {
  height: 4px;
  width: 130%;
  margin: 35px -25px 25px;
  background: url(../images/bg-dots.svg);
}
/* FAQ section */
.faq {
  padding: 50px 150px;
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
}
.faq > * {
  grid-column: 2;
}
.faq__title {
  font-size: 30px;
  font-weight: 500;
  color: hsl(229, 31%, 21%);
  margin: 10px 0;
  text-align: center;
}
.faq__paragraph {
  color: hsl(229, 8%, 60%);
  grid-column: 2;
  margin: 0;
  padding: 15px 15px 50px 15px;
  border-bottom: 1px solid hsl(229, 8%, 60%);
  text-align: center;
}
.faq__details {
  padding: 20px 20px 20px 0;
  border-bottom: 1px solid hsl(229, 8%, 60%);
}
.faq__summary {
  color: hsl(229, 31%, 21%);
  list-style: none;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
}
/* For chrome and browsers that don't support the list style none for details html markers */
.faq__summary::-webkit-details-marker {
  display: none;
}
.faq__summary:hover,
.faq__summary:focus {
  color: hsl(0, 94%, 66%);
}
.faq__details .faq__summary svg {
  transition: all 0.5s;
}
.faq__details[open] .faq__summary svg {
  transform: rotate(180deg);
}
.faq__details[open] .faq__summary svg path {
  stroke: #fa5757;
}
.faq__text {
  color: hsl(227, 7%, 41%);
  line-height: 2;
  font-size: 16px;
}
.faq__button {
  margin-top: 50px;
  justify-self: center;
}
/* Contact Section */
.contact {
  background: hsl(231, 69%, 60%);
  color: #ffffff;
  text-align: center;
  padding: 50px;
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
}
.contact > * {
  grid-column: 2;
}
.contact__paragraph {
  text-transform: uppercase;
  letter-spacing: 0.2em;
}
.contact__title {
  font-weight: 500;
  font-size: 34px;
  padding: 0 75px;
}
.contact__input-block {
  display: inline-flex;
  flex-direction: column;
  position: relative;
}
.contact__input {
  color: hsl(229, 31%, 21%);
  background: #ffffff;
  border: 2px solid #ffffff;
  border-radius: 5px;
  padding: 10px 20px;
  font-family: 'Rubik', sans-serif;
  font-weight: 400;
  font-size: 14px;
  box-sizing: border-box;
  width: 24vw;
}
.contact__input.incorrect {
  border: 2px solid hsl(0, 94%, 66%);
  border-radius: 5px 5px 0 0;
}
.contact__error-icon {
  display: none;
  position: absolute;
  top: 10px;
  right: 20px;
}
.contact__messages {
  display: grid;
}
.contact__message {
  visibility: hidden;
  grid-column: 1;
  grid-row: 1;
  font-size: 12px;
  font-weight: 500;
  font-style: italic;
  text-align: left;
  padding: 5px;
  border-radius: 0 0 5px 5px;
  margin: 0;
}
.contact__error-message {
  background: hsl(0, 94%, 66%);
  color: #ffffff;
  border: 2px solid hsl(0, 94%, 66%);
}
.contact__sent-message {
  background: #106527;
  color: #ffffff;
  border: 2px solid #106527;
}
.contact__submit-button {
  color: #ffffff;
  background: hsl(0, 94%, 66%);
  border: 2px solid hsl(0, 94%, 66%);
  border-radius: 5px;
  padding: 10px 20px;
  font-family: 'Rubik', sans-serif;
  font-weight: 500;
  font-size: 14px;
  margin-left: 10px;
  cursor: pointer;
}
.contact__submit-button:hover,
.contact__submit-button:focus {
  color: hsl(0, 94%, 66%);
  background: #ffffff;
}

/* Footer Section */
.footer {
  background-color: hsl(229, 31%, 21%);
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  padding: 50px 150px 10px;
}
.footer__logo-menu-block {
  display: flex;
  align-items: center;
}
.footer .image-block svg path {
  fill: #ffffff;
}
.footer__menu {
  padding-left: 50px;
}
.footer__menu__link {
  color: #ffffff;
}
.footer__social-links {
  list-style: none;
  display: flex;
  margin: 0;
  padding: 0;
}
.footer__social-link {
  margin-right: 40px;
}
.footer__social-link svg:hover path,
.footer__social-link:focus svg path {
  fill: hsl(0, 94%, 66%);
}
/* Attribution Section */
.attribution {
  font-size: 11px;
  text-align: center;
  flex-basis: 100%;
  margin-top: 40px;
  color: #ffffff;
}
.attribution a {
  color: #ffffff;
}

/* Media Queries */
@media all and (max-width: 440px) {
  /* Header Section */
  .header__container {
    position: absolute;
    width: 100vw;
    height: 100vh;
    z-index: 2;
  }
  .header {
    padding: 50px 25px 25px;
  }
  .header__container.open {
    background: rgba(37, 43, 70, 0.9);
  }
  .header__container.open .image-block svg path {
    fill: #ffffff;
  }
  .header__container.open .image-block svg circle {
    fill: #ffffff;
  }
  .header__container.open .image-block svg circle + path {
    fill: #252b46;
  }
  .header__mobile-menu__button {
    display: block;
    background: none;
    border: none;
    padding: 0px;
    cursor: pointer;
  }
  .header__menu {
    display: none;
    position: absolute;
    top: 110px;
    left: 0;
    flex-direction: column;
    align-items: center;
    width: 100vw;
    padding: 0;
    text-align: center;
  }
  .header__menu__item {
    border-bottom: 1px solid hsl(229, 8%, 60%);
    width: 85%;
    padding: 25px 0;
    margin-right: 0;
  }
  .header__menu__item:first-of-type {
    border-top: 1px solid hsl(229, 8%, 60%);
  }
  .header__menu__item:last-of-type {
    border: none;
  }
  .header__menu__link {
    color: #ffffff;
    font-size: 18px;
    letter-spacing: 0.15em;
  }
  .header__menu__link__button {
    background: rgba(37, 43, 70, 0.3);
    border: 2px solid #ffffff;
    width: 100%;
    box-sizing: border-box;
    display: inline-block;
  }
  .header__menu__link__button:hover,
  .header__menu__link__button:focus {
    background: rgba(37, 43, 70, 0.3);
    color: hsl(0, 94%, 66%);
  }
  .header__mobile__social-links {
    position: absolute;
    bottom: 50px;
    left: 0;
    list-style: none;
    justify-content: center;
    padding: 0;
    margin: 0;
    width: 100%;
  }
  .header__mobile__social-links__item {
    margin: 0 20px;
  }

  .header__mobile__social-link svg:hover path,
  .header__mobile__social-link:focus svg path {
    fill: hsl(0, 94%, 66%);
  }
  /* Intro Section */
  .intro {
    padding: 150px 75px 50px 150px;
  }
}

